--- a/pages/character/character.wxss
+++ b/pages/character/character.wxss
@@ -35,5 +35,7 @@ image{
   border:1rpx solid white;
 }
 .weui-media-box__desc {
-  margin-bottom: 30rpx;
+  margin-bottom: 20rpx;
+  line-height: 1.5;
+  -webkit-line-clamp: 99;
 }
