--- a/pages/character/character.wxml
+++ b/pages/character/character.wxml
@@ -1,9 +1,10 @@
 <!--pages/character/character.wxml   性格测试页-->
 <view class="page">
-    <view class="page__hd">
-        <view class="page__title">专业匹配</view>
-        <view class="page__desc">character</view>
-    </view>
+    <!-- <view class="page__hd"> -->
+        <!-- <view class="page__title">专业匹配</view> -->
+        <!-- <view class="page__desc">character</view> -->
+    <!-- </view> -->
+    <image src='{{src}}' mode='widthFix' style='margin-bottom: -10rpx'></image>
     <view class="page__bd">
         <view class="weui-panel weui-panel_access">
             <view class="weui-panel__bd">
@@ -18,7 +19,7 @@
         </view>
     </view>
     
-    <view class="page__bd page__bd_spacing" style='margin-top:40rpx'>
+    <view class="page__bd page__bd_spacing" style='margin-top:20rpx'>
         <button class="weui-btn" type="primary" id='1' bindtap='simple'>简单版</button>
         <button class="weui-btn" type="primary" id='2' bindtap='pro'>专业版</button>
     </view>
