--- a/pages/intelligence/result/result.wxml
+++ b/pages/intelligence/result/result.wxml
@@ -1,7 +1,7 @@
 <!-- 智能推荐结果页 -->
 <view class="page">
 	<view class="page__desc">分数：{{EXAMSCORE}}　　{{MAJORTYPE_VALUE}}</view>
-	<view class="page__desc"><text style="color:black">温馨提示：</text>我们已为您精确到专业分数，若冲，稳，保，垫四个结果中出现相同院校，请仔细核对专业分数。</view>
+	<view class="page__desc"><text style="color:black">温馨提示：</text>我们已为您精确到专业分数，若冲，稳，保三个结果中出现相同院校，请仔细核对专业分数。</view>
 	<view class="page__bd">
 		<block wx:for="{{listchong}}" wx:key="item.SCHOOL_ID">
 			<view class="weui-cells weui-cells_after-title"
