--- a/pages/person/person.wxml
+++ b/pages/person/person.wxml
@@ -1,38 +1,43 @@
 <!-- 个人中心页面 -->
 
 <!-- 学生 -->
-<view class="page" wx-if="{{role_id == 'sja4gc59bg'}}">
-	<!-- title -->
-	<view class="page__hd">
-		<view class="page__title">个人中心</view>
-		<view class="page__desc">student</view>
-	</view>
-	<!-- 头像 -->
-	<view class="weui-cells weui-cells_after-title">
-		<view class="weui-cell">
-			<view class="weui-cell__hd" bindtap='chooseImageTap' style="position: relative;margin-right: 10px; border-radius: 50px;">
-				<image src="{{headurl}}" style="width: 50px; height: 50px; display: block"/>
-			</view>
-			<view class="weui-cell__bd">
-				<view>{{nickname}}
-          <text class='vip-style' style='background-color: #F56C6C' wx:if="{{vip == '高级会员'}}">{{vip}}</text>
-          <text class='vip-style' style='background-color: #67C23A' wx:if="{{vip == '初级会员'}}">{{vip}}</text>
-          <text class='vip-style' style='background-color: #409EFF' wx:if="{{vip == '体验版会员'}}">{{vip}}</text>
+  <view class="page" style='background-color:#fff' wx-if="{{role_id == 'sja4gc59bg'}}">
+    <!-- title -->
+    <image src='{{src}}' style='width:100%' mode='widthFix'></image>
+    <view class="page__hd" style='position:absolute;left:0;top:0; width:100%;padding:0 5%;'>
+      <view class="page__title" style='color:#fff; position:absolute; top:30rpx; left:45%; transform:translateX(-50%)'>个人中心
+      </view>
+      <view class='gd_Personal_Center'>
+        <view class='ldq-flex' style='padding-top: 55px;'>
+          <text style='color:#14C4B0;' class='ldq-child'>昵称</text>
+          <text style='color:#14C4B0;' class='ldq-child'>学科分类</text>
+          <text style='color:#14C4B0;' class='ldq-child'>分数</text>
         </view>
-				<view style="font-size: 13px;color: #888888;">
-					<text wx:if="{{majortype == 'gjv044girc'}}">文科</text>
-					<text wx:if="{{majortype == 'r6j4mh69be'}}">理科</text>
-					|
-					<text>{{examscore}}分</text>
-				</view>
-			</view>
-		</view>
+        <view class='ldq-flex'>
+          <text style='color:#333;' class='ldq-child'>{{nickname}}</text>
+          <text  wx:if="{{majortype == 'gjv044girc'}}" style='color:#333' class='ldq-child'>文科</text>
+          <text  wx:if="{{majortype == 'r6j4mh69be'}}" style='color:#333' class='ldq-child'>理科</text>
+          <text style='color:#333;' class='ldq-child'>{{examscore}}分</text>
+        </view>
+            <!-- 头像 -->
+            <view class="weui-cell__hd gd_portrait" bindtap='chooseImageTap'>
+              <image src="{{headurl}}" style="width: 70px; height: 70px;"/>
+            </view>
+            <view class='gd_star'>
+              <image style='width:20px' mode='aspectFit' src='{{src1}}'></image>
+              <text class='vip-style' wx:if="{{vip == '高级会员'}}">{{vip}} <text style='font-family:黑体'>></text></text>
+              <text class='vip-style' wx:elif="{{vip == '初级会员'}}">{{vip}} <text style='font-family:黑体'>></text></text>
+              <text class='vip-style' wx:elif="{{vip == '体验版会员'}}">{{vip}} <text style='font-family:黑体'>></text></text>
+              <text class='vip-style' wx:elif="{{vip == '预约专家'}}">{{vip}} <text style='font-family:黑体'>></text></text>
+              <text class='vip-style' wx:else>普通用户 <text style='font-family:黑体'>></text></text>
+            </view>
+      </view>
 	</view>
 	<!-- 个人信息 -->
-	<view class="weui-cells__title">个人信息</view>
+	<view class="weui-cells__title" style='margin-top:100rpx; color:#22C5B3'>个人信息</view>
 	<view class="weui-cells weui-cells_after-title">
 		<navigator url="/pages/person/basics/basics" hover-class="navigator-hover" open-type='redirectTo'>
-			<view class="weui-cell">
+			<view class="weui-cell" style='border-top: 1px solid #eee'>
 				<view class="weui-cell__hd">
 					<image src="./img/purple.svg" style="margin-right: 5px;vertical-align: middle;width:20px; height: 20px;"></image>
 				</view>
@@ -49,10 +54,10 @@
 		</navigator>
 	</view>
 	<!-- 个人收藏 -->
-	<view class="weui-cells__title">个人收藏</view>
+	<view class="weui-cells__title" style='color:#22C5B3'>个人收藏</view>
 	<view class="weui-cells weui-cells_after-title">
 		<navigator url="/pages/person/collect/collect" hover-class="navigator-hover" open-type='navigateTo'>
-			<view class="weui-cell">
+			<view class="weui-cell" style='border-top: 1px solid #eee'>
 				<view class="weui-cell__hd">
 					<image src="./img/yellow.svg" style="margin-right: 5px;vertical-align: middle;width:20px; height: 20px;"></image>
 				</view>
@@ -69,10 +74,10 @@
 		</navigator>
 	</view>
 	<!-- 账户信息 -->
-	<view class="weui-cells__title">账户信息</view>
+	<view class="weui-cells__title" style='color:#22C5B3'>账户信息</view>
 	<view class="weui-cells weui-cells_after-title">
 		<navigator url="/pages/person/security/loginpw/loginpw" hover-class="navigator-hover" open-type='navigate'>
-			<view class="weui-cell">
+			<view class="weui-cell"  style='border-top: 1px solid #eee'>
 				<view class="weui-cell__hd">
 					<image src="./img/blue.svg" style="margin-right: 5px;vertical-align: middle;width:20px; height: 20px;"></image>
 				</view>
@@ -89,37 +94,67 @@
 		</navigator>
 	</view>
 	<!-- vip -->
-	<view class="weui-cells__title">开通 VIP</view>
+	<view class="weui-cells__title" style='color:#22C5B3'>开通 VIP</view>
 	<view class="weui-cells weui-cells_after-title">
-		<view class="weui-cell" bindtap="single" id='1'>
+  <navigator url="" hover-class="navigator-hover" open-type='navigate'>
+		<view class="weui-cell" bindtap="single" id='1' style='border-top: 1px solid #eee'>
 			<view class="weui-cell__hd">
-				<image src="./img/vip1.svg" style="margin-right: 5px;vertical-align: middle;width:20px; height: 20px;"></image>
+				<image src="./img/vip1.svg" style="margin-right: 5px; vertical-align: middle; width:20px; height: 20px;"></image>
 			</view>
 			<view class="weui-cell__bd">开通初级会员</view>
 		</view>
+  </navigator>
+  <navigator url="" hover-class="navigator-hover" open-type='navigate'>
 		<view class="weui-cell" bindtap="single" id='2'>
 			<view class="weui-cell__hd">
 				<image src="./img/vip1.svg" style="margin-right: 5px;vertical-align: middle;width:20px; height: 20px;"></image>
 			</view>
 			<view class="weui-cell__bd">开通高级会员</view>
 		</view>
+  </navigator>
+  <navigator url="" hover-class="navigator-hover" open-type='navigate'>
 		<view class="weui-cell" bindtap="single" id='4'>
 			<view class="weui-cell__hd">
 				<image src="./img/vip1.svg" style="margin-right: 5px;vertical-align: middle;width:20px; height: 20px;"></image>
 			</view>
 			<view class="weui-cell__bd">激活会员卡</view>
 		</view>
+  </navigator>
 	</view>
 </view>
+
+<!-- ---------------------------------------------------------------- -->
+
 <!-- 老师 -->
-<view class="page" wx-if="{{role_id == 'm9bxdt9g36'}}">
+<view class="page" wx-if="{{role_id == 'm9bxdt9g36'}}" style='background-color:#fff'>
 	<!-- title -->
-	<view class="page__hd">
-		<view class="page__title">个人中心</view>
-		<view class="page__desc">teacher</view>
+  <image src='{{src}}' mode='widthFix' style='width:100%'></image>
+	<view class="page__hd" style='width:100%; padding:0 5%;'>
+		<view class="page__title" style='color:#fff; position:absolute; top:30rpx; left:50%; transform:translateX(-50%)'>个人中心
+    </view>
+    <view class='gd_Personal_Center' style='transform:translateY(-50%);margin-top:0'>
+       <view class='ldq-flex' style='padding-top: 55px;'>
+        <text style='color:#14C4B0;' class='ldq-child'>昵称</text>
+        <text style='color:#14C4B0;' class='ldq-child gd-child'>学校名称</text>
+        <text style='color:#14C4B0;' class='ldq-child'>工作年限</text>
+      </view>
+      <view class='ldq-flex'>
+        <text style='color:#333;' class='ldq-child'>{{nickname}}</text>
+        <text style='color:#333' class='ldq-child gd-child gd-over'>{{school_name}}</text>
+        <text  wx:if="{{jobdate == 'l7gru49ll3'}}" style='color:#333' class='ldq-child'>一年以内</text>
+        <text  wx:if="{{jobdate == 'q9q70meulf'}}" style='color:#333' class='ldq-child'>1到3年</text>
+        <text  wx:if="{{jobdate == 'g21h56sllq'}}" style='color:#333' class='ldq-child'>3到5年</text>
+        <text  wx:if="{{jobdate == 'lfs1lmt901'}}" style='color:#333' class='ldq-child'>5到10年</text>
+        <text  wx:if="{{jobdate == 'o5ayni47vh'}}" style='color:#333' class='ldq-child'>10年以上</text>
+      </view> 
+          <!-- 头像 -->
+      <view class="weui-cell__hd gd_portrait" bindtap='chooseImageTap'>
+        <image src="{{headurl}}" style="width: 70px; height: 70px;"/>
+      </view>
+    </view>
 	</view>
 	<!-- 头像 -->
-	<view class="weui-cells weui-cells_after-title">
+	<!-- <view class="weui-cells weui-cells_after-title">
 		<view class="weui-cell">
 			<view class="weui-cell__hd" bindtap='chooseImageTap' style="position: relative;margin-right: 10px; border-radius: 50px;">
 				<image src="{{headurl}}" style="width: 50px; height: 50px; display: block"/>
@@ -133,12 +168,12 @@
 				</view>
 			</view>
 		</view>
-	</view>
+	</view> -->
 	<!-- 个人信息 -->
-	<view class="weui-cells__title">个人信息</view>
+	<view class="weui-cells__title" style='margin-top:-50rpx'>个人信息</view>
 	<view class="weui-cells weui-cells_after-title">
 		<navigator url="/pages/person/tbasics/tbasics" hover-class="navigator-hover" open-type='redirectTo'>
-			<view class="weui-cell">
+			<view class="weui-cell" style='border-top: 1px solid #eee'>
 				<view class="weui-cell__hd">
 					<image src="./img/purple.svg" style="margin-right: 5px;vertical-align: middle;width:20px; height: 20px;"></image>
 				</view>
@@ -150,7 +185,7 @@
 	<view class="weui-cells__title">账户信息</view>
 	<view class="weui-cells weui-cells_after-title">
 		<navigator url="/pages/person/security/loginpw/loginpw" hover-class="navigator-hover" open-type='navigate'>
-			<view class="weui-cell">
+			<view class="weui-cell" style='border-top: 1px solid #eee'>
 				<view class="weui-cell__hd">
 					<image src="./img/blue.svg" style="margin-right: 5px;vertical-align: middle;width:20px; height: 20px;"></image>
 				</view>
