--- a/pages/teacher/content/content.wxml
+++ b/pages/teacher/content/content.wxml
@@ -20,7 +20,7 @@
                 <view class="weui-label">联系电话：</view>
             </view>
             <view class="weui-cell__bd">
-                <input class="weui-input" bindinput="bindPhone" bindblur="blurPhone" name='PHONE_STU' value='{{PHONE_STU}}'/>
+                <input class="weui-input" bindinput="bindPhone" bindblur="blurPhone" name='PHONE_STU' value='{{PHONE_STU}}' maxlength='11'/>
             </view>
         </view>
         <view class="weui-cell weui-cell_input">
