--- a/pages/imitate/imitate.wxss
+++ b/pages/imitate/imitate.wxss
@@ -78,3 +78,12 @@ page{
   width:100%;
   height:50rpx;
 }
+.gd-to-index{
+  margin-top: 200rpx;
+  text-align: center;
+  color: #f00;
+  font-size: 38rpx;
+}
+.gd-to-index text{
+  color: #888;
+}
