--- a/pages/imitate/imitate.wxml
+++ b/pages/imitate/imitate.wxml
@@ -15,8 +15,12 @@
       </view>
   </view>
   <view class="weui-tab__panel">
-      <view class="gd-to-index" hidden="{{list1.length == 5}}">
-        请在官网进行生成志愿表的操作,官网地址:www.gaokgh.com.cn
+      <view class="gd-to-index" hidden="{{list1.length > 0 || activeIndex != 0}}">
+        <text>
+        请在官网进行生成志愿表的操作
+        </text>
+        <view></view>
+        官网地址:www.gaokgh.com.cn
       </view>
       <view class="" hidden="{{true}}">
 				<form bindsubmit='b1Submit' hidden="{{activeIndex != 0}}">
@@ -68,7 +72,7 @@
 					<button class="weui-btn" type="warn" bindtap="delB1">删除本一志愿</button>
 				</view>
 			</view>
-      <view class="gd-to-index" hidden="{{list2.length == 10}}">
+      <view class="gd-to-index" hidden="{{list2.length > 0 || activeIndex != 1}}">
         <text>
         请在官网进行生成志愿表的操作
         </text>
