--- a/pages/consult/consult.wxss
+++ b/pages/consult/consult.wxss
@@ -180,17 +180,16 @@ button[type="primary"] {
 }
 .mb-biankuang{
   margin-top: 10px;
-  border: 2px solid #E84C33;
-  border-radius: 15px;
-  border-bottom: none;
+  border-top: 2px solid #E84C33;
 }
 .flex-wrps1{
+  padding-left: 10px;
   display: flex;
   flex-direction: column;
-  border-bottom: 1px solid #E84C33;
-  border-radius: 15px;
+  border-bottom: 1px solid #BBB;
   width: 100%;
   height: 80px;
+  position: relative;
 }
 .weui-media-box__desc{
   margin-top:15rpx;
@@ -280,4 +279,15 @@ button[type="primary"] {
 .icon-subjecttype{
   width:80rpx;
   height:40rpx;
+}
+.gd_ranking{
+  border-radius: 3px;
+  text-align: center;
+  color: #fff;
+  width: 20px;
+  height: 20px;
+  background-color: #FA2B23;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
 }
