--- a/pages/school/schoolcontent/schoolcontent.wxml
+++ b/pages/school/schoolcontent/schoolcontent.wxml
@@ -118,22 +118,232 @@
                 <view class="weui-cell__bd">招生计划</view>
                 <view class="weui-cell__ft"></view>
             </view>
-            <view class='plan' wx:for="{{liberal}}" wx:key="" wx:if="{{MAJORTYPE == 'gjv044girc'}}">
-              <view class='plan-left'>
-                <view class='left-top'>{{item.MJNAME}}</view>
-                <view class='left-bottom'>2018年计划数：{{item.PLANCOUNT}}人　</view>
-                <!-- <view class='left-bottom' style="color:#666">学费：3500　学制：4年</view> -->
-              </view>
-              <view class='plan-right'>文科</view>
-            </view>   
-            <view class='plan' wx:for="{{science}}" wx:key="" wx:if="{{MAJORTYPE == 'r6j4mh69be'}}">
-              <view class='plan-left'>
-                <view class='left-top'>{{item.MJNAME}}</view>
-                <view class='left-bottom'>2018年计划数：{{item.PLANCOUNT}}人</view>
-                <!-- <view class='left-bottom' style="color:#666">学费：3500　学制：4年</view> -->
-              </view>
-              <view class='plan-right'>理科</view>
-            </view>  
+               <!-- 文科开始 -->
+            <block wx:if="{{MAJORTYPE == 'gjv044girc'}}">
+                <view class='plan' style='heigth:auto;' wx:for="{{B1_Wen}}" wx:key="">
+                  <view class='plan-left'>
+                    <view class='left-top'>
+                      <view style='width:70%;'>{{item.MJNAME}}</view>
+                      <view class='gd_batch'>本科一批</view>
+                    </view>
+                  </view>
+                  <view style='width:100%;'>
+                    <view class='gd_schedule' style='display:flew;'>
+                      <text class='gd_schedule_text gd_font-color'>年份</text>
+                      <text class='gd_schedule_text gd_font-color'>2018</text>
+                      <text class='gd_schedule_text gd_font-color'>2017</text>
+                      <text class='gd_schedule_text gd_font-color'>2016</text> 
+                    </view>
+                    <view class='gd_schedule' style='display:flew;'>
+                      <text class='gd_schedule_text gd_font-color'>最高分</text>
+                      <text class='gd_schedule_text' style='color:#78C64F' wx:for-item="ite" wx:key="" wx:for="{{item.mjscores}}">{{ite.MAXSCORE}}</text>
+                      <text class='gd_schedule_text' wx:if="{{item.mjscores.length<2}}">-</text>
+                      <text class='gd_schedule_text' wx:if="{{item.mjscores.length<3}}">-</text> 
+                    </view>
+
+
+                    <view class='gd_schedule' style='display:flew;'>
+                      <text class='gd_schedule_text gd_font-color'>最低分</text>
+                      <text class='gd_schedule_text' style='color:#F36B6D' wx:for-item="ite" wx:key="" wx:for="{{item.mjscores}}">{{ite.MINSCORE}}</text>
+                      <text class='gd_schedule_text' wx:if="{{item.mjscores.length<2}}">-</text>
+                      <text class='gd_schedule_text' wx:if="{{item.mjscores.length<3}}">-</text> 
+                    </view>
+
+
+                    <view class='gd_schedule' style='display:flew;'>
+                      <text class='gd_schedule_text gd_font-color'>平均分</text>
+                      <text class='gd_schedule_text' style='color:#E3A337' wx:for-item="ite" wx:key="" wx:for="{{item.mjscores}}">{{ite.AVESCORE}}</text>
+                      <text class='gd_schedule_text' wx:if="{{item.mjscores.length<2}}">-</text>
+                      <text class='gd_schedule_text' wx:if="{{item.mjscores.length<3}}">-</text> 
+                    </view>
+
+
+                    <view class='gd_schedule' style='display:flew;'>
+                      <text class='gd_schedule_text gd_font-color'>计划数</text>
+                      <text class='gd_schedule_text' style='color:#3F9DFD' wx:for-item="ite" wx:key="" wx:for="{{item.mjscores}}">{{ite.PLANCOUNT}}</text>
+                      <text class='gd_schedule_text' wx:if="{{item.mjscores.length<2}}">-</text>
+                      <text class='gd_schedule_text' wx:if="{{item.mjscores.length<3}}">-</text> 
+                    </view>
+
+
+                    <view class='gd_schedule' style='display:flew;'>
+                      <text class='gd_schedule_text gd_font-color'>录取数</text>
+                      <text class='gd_schedule_text' style='color:#F26DF1' wx:for-item="ite" wx:key="" wx:for="{{item.mjscores}}">{{ite.ENTERCOUNT}}</text>
+                      <text class='gd_schedule_text' wx:if="{{item.mjscores.length<2}}">-</text>
+                      <text class='gd_schedule_text' wx:if="{{item.mjscores.length<3}}">-</text> 
+                    </view>
+                  </view>
+                </view>
+                <!-- 本一结束本二开始 -->
+                <view class='plan' style='heigth:auto;' wx:for="{{B2_Wen}}" wx:key="" wx:if="{{array.DIC_ID == 'r6j4mh69be'}}">
+                  <view class='plan-left'>
+                    <view class='left-top'>
+                      <view style='width:70%;'>{{item.MJNAME}}</view>
+                      <view class='gd_batch'>本科二批</view>
+                    </view>
+                  </view>
+                  <view style='width:100%;'>
+                    <view class='gd_schedule' style='display:flew;'>
+                      <text class='gd_schedule_text gd_font-color'>年份</text>
+                      <text class='gd_schedule_text gd_font-color'>2018</text>
+                      <text class='gd_schedule_text gd_font-color'>2017</text>
+                      <text class='gd_schedule_text gd_font-color'>2016</text> 
+                    </view>
+                    <view class='gd_schedule' style='display:flew;'>
+                      <text class='gd_schedule_text gd_font-color'>最高分</text>
+                      <text class='gd_schedule_text' style='color:#78C64F' wx:for-item="ite" wx:key="" wx:for="{{item.mjscores}}">{{ite.MAXSCORE}}</text>
+                      <text class='gd_schedule_text' wx:if="{{item.mjscores.length<2}}">-</text>
+                      <text class='gd_schedule_text' wx:if="{{item.mjscores.length<3}}">-</text> 
+                    </view>
+
+
+                    <view class='gd_schedule' style='display:flew;'>
+                      <text class='gd_schedule_text gd_font-color'>最低分</text>
+                      <text class='gd_schedule_text' style='color:#F36B6D' wx:for-item="ite" wx:key="" wx:for="{{item.mjscores}}">{{ite.MINSCORE}}</text>
+                      <text class='gd_schedule_text' wx:if="{{item.mjscores.length<2}}">-</text>
+                      <text class='gd_schedule_text' wx:if="{{item.mjscores.length<3}}">-</text> 
+                    </view>
+
+
+                    <view class='gd_schedule' style='display:flew;'>
+                      <text class='gd_schedule_text gd_font-color'>平均分</text>
+                      <text class='gd_schedule_text' style='color:#E3A337' wx:for-item="ite" wx:key="" wx:for="{{item.mjscores}}">{{ite.AVESCORE}}</text>
+                      <text class='gd_schedule_text' wx:if="{{item.mjscores.length<2}}">-</text>
+                      <text class='gd_schedule_text' wx:if="{{item.mjscores.length<3}}">-</text> 
+                    </view>
+
+
+                    <view class='gd_schedule' style='display:flew;'>
+                      <text class='gd_schedule_text gd_font-color'>计划数</text>
+                      <text class='gd_schedule_text' style='color:#3F9DFD' wx:for-item="ite" wx:key="" wx:for="{{item.mjscores}}">{{ite.PLANCOUNT}}</text>
+                      <text class='gd_schedule_text' wx:if="{{item.mjscores.length<2}}">-</text>
+                      <text class='gd_schedule_text' wx:if="{{item.mjscores.length<3}}">-</text> 
+                    </view>
+
+
+                    <view class='gd_schedule' style='display:flew;'>
+                      <text class='gd_schedule_text gd_font-color'>录取数</text>
+                      <text class='gd_schedule_text' style='color:#F26DF1' wx:for-item="ite" wx:key="" wx:for="{{item.mjscores}}">{{ite.ENTERCOUNT}}</text>
+                      <text class='gd_schedule_text' wx:if="{{item.mjscores.length<2}}">-</text>
+                      <text class='gd_schedule_text' wx:if="{{item.mjscores.length<3}}">-</text> 
+                    </view>
+                  </view>
+                </view>
+            </block>
+              <!-- 文科结束  理科开始 -->
+            <block wx:if="{{MAJORTYPE == 'r6j4mh69be'}}">
+                <view class='plan' style='heigth:auto;' wx:for="{{B1_Li}}" wx:key="">
+                  <view class='plan-left'>
+                    <view class='left-top'>
+                      <view style='width:70%;'>{{item.MJNAME}}</view>
+                      <view class='gd_batch'>本科一批</view>
+                    </view>
+                  </view>
+                  <view style='width:100%;'>
+                    <view class='gd_schedule' style='display:flew;'>
+                      <text class='gd_schedule_text gd_font-color'>年份</text>
+                      <text class='gd_schedule_text gd_font-color'>2018</text>
+                      <text class='gd_schedule_text gd_font-color'>2017</text>
+                      <text class='gd_schedule_text gd_font-color'>2016</text> 
+                    </view>
+                    <view class='gd_schedule' style='display:flew;'>
+                      <text class='gd_schedule_text gd_font-color'>最高分</text>
+                      <text class='gd_schedule_text' style='color:#78C64F' wx:for-item="ite" wx:key="" wx:for="{{item.mjscores}}">{{ite.MAXSCORE}}</text>
+                      <text class='gd_schedule_text' wx:if="{{item.mjscores.length<2}}">-</text>
+                      <text class='gd_schedule_text' wx:if="{{item.mjscores.length<3}}">-</text> 
+                    </view>
+
+
+                    <view class='gd_schedule' style='display:flew;'>
+                      <text class='gd_schedule_text gd_font-color'>最低分</text>
+                      <text class='gd_schedule_text' style='color:#F36B6D' wx:for-item="ite" wx:key="" wx:for="{{item.mjscores}}">{{ite.MINSCORE}}</text>
+                      <text class='gd_schedule_text' wx:if="{{item.mjscores.length<2}}">-</text>
+                      <text class='gd_schedule_text' wx:if="{{item.mjscores.length<3}}">-</text> 
+                    </view>
+
+
+                    <view class='gd_schedule' style='display:flew;'>
+                      <text class='gd_schedule_text gd_font-color'>平均分</text>
+                      <text class='gd_schedule_text' style='color:#E3A337' wx:for-item="ite" wx:key="" wx:for="{{item.mjscores}}">{{ite.AVESCORE}}</text>
+                      <text class='gd_schedule_text' wx:if="{{item.mjscores.length<2}}">-</text>
+                      <text class='gd_schedule_text' wx:if="{{item.mjscores.length<3}}">-</text> 
+                    </view>
+
+
+                    <view class='gd_schedule' style='display:flew;'>
+                      <text class='gd_schedule_text gd_font-color'>计划数</text>
+                      <text class='gd_schedule_text' style='color:#3F9DFD' wx:for-item="ite" wx:key="" wx:for="{{item.mjscores}}">{{ite.PLANCOUNT}}</text>
+                      <text class='gd_schedule_text' wx:if="{{item.mjscores.length<2}}">-</text>
+                      <text class='gd_schedule_text' wx:if="{{item.mjscores.length<3}}">-</text> 
+                    </view>
+
+
+                    <view class='gd_schedule' style='display:flew;'>
+                      <text class='gd_schedule_text gd_font-color'>录取数</text>
+                      <text class='gd_schedule_text' style='color:#F26DF1' wx:for-item="ite" wx:key="" wx:for="{{item.mjscores}}">{{ite.ENTERCOUNT}}</text>
+                      <text class='gd_schedule_text' wx:if="{{item.mjscores.length<2}}">-</text>
+                      <text class='gd_schedule_text' wx:if="{{item.mjscores.length<3}}">-</text> 
+                    </view>
+                  </view>
+                </view>
+                <!-- 本一结束本二开始 -->
+                <view class='plan' style='heigth:auto;' wx:for="{{B2_Li}}" wx:key="" wx:if="{{array.DIC_ID == 'r6j4mh69be'}}">
+                  <view class='plan-left'>
+                    <view class='left-top'>
+                      <view style='width:70%;'>{{item.MJNAME}}</view>
+                      <view class='gd_batch'>本科二批</view>
+                    </view>
+                  </view>
+                  <view style='width:100%;'>
+                    <view class='gd_schedule' style='display:flew;'>
+                      <text class='gd_schedule_text gd_font-color'>年份</text>
+                      <text class='gd_schedule_text gd_font-color'>2018</text>
+                      <text class='gd_schedule_text gd_font-color'>2017</text>
+                      <text class='gd_schedule_text gd_font-color'>2016</text> 
+                    </view>
+                    <view class='gd_schedule' style='display:flew;'>
+                      <text class='gd_schedule_text gd_font-color'>最高分</text>
+                      <text class='gd_schedule_text' style='color:#78C64F' wx:for-item="ite" wx:key="" wx:for="{{item.mjscores}}">{{ite.MAXSCORE}}</text>
+                      <text class='gd_schedule_text' wx:if="{{item.mjscores.length<2}}">-</text>
+                      <text class='gd_schedule_text' wx:if="{{item.mjscores.length<3}}">-</text> 
+                    </view>
+
+
+                    <view class='gd_schedule' style='display:flew;'>
+                      <text class='gd_schedule_text gd_font-color'>最低分</text>
+                      <text class='gd_schedule_text' style='color:#F36B6D' wx:for-item="ite" wx:key="" wx:for="{{item.mjscores}}">{{ite.MINSCORE}}</text>
+                      <text class='gd_schedule_text' wx:if="{{item.mjscores.length<2}}">-</text>
+                      <text class='gd_schedule_text' wx:if="{{item.mjscores.length<3}}">-</text> 
+                    </view>
+
+
+                    <view class='gd_schedule' style='display:flew;'>
+                      <text class='gd_schedule_text gd_font-color'>平均分</text>
+                      <text class='gd_schedule_text' style='color:#E3A337' wx:for-item="ite" wx:key="" wx:for="{{item.mjscores}}">{{ite.AVESCORE}}</text>
+                      <text class='gd_schedule_text' wx:if="{{item.mjscores.length<2}}">-</text>
+                      <text class='gd_schedule_text' wx:if="{{item.mjscores.length<3}}">-</text> 
+                    </view>
+
+
+                    <view class='gd_schedule' style='display:flew;'>
+                      <text class='gd_schedule_text gd_font-color'>计划数</text>
+                      <text class='gd_schedule_text' style='color:#3F9DFD' wx:for-item="ite" wx:key="" wx:for="{{item.mjscores}}">{{ite.PLANCOUNT}}</text>
+                      <text class='gd_schedule_text' wx:if="{{item.mjscores.length<2}}">-</text>
+                      <text class='gd_schedule_text' wx:if="{{item.mjscores.length<3}}">-</text> 
+                    </view>
+
+
+                    <view class='gd_schedule' style='display:flew;'>
+                      <text class='gd_schedule_text gd_font-color'>录取数</text>
+                      <text class='gd_schedule_text' style='color:#F26DF1' wx:for-item="ite" wx:key="" wx:for="{{item.mjscores}}">{{ite.ENTERCOUNT}}</text>
+                      <text class='gd_schedule_text' wx:if="{{item.mjscores.length<2}}">-</text>
+                      <text class='gd_schedule_text' wx:if="{{item.mjscores.length<3}}">-</text> 
+                    </view>
+                  </view>
+                </view>
+            </block> 
+            
+            <!-- 理科结束   -->
             </view> 
     </view>
     <view class="weui-tab__content" hidden="{{activeIndex != 1}}">
