--- a/pages/school/schoolcontent/schoolcontent.wxml
+++ b/pages/school/schoolcontent/schoolcontent.wxml
@@ -120,66 +120,14 @@
             </view>
                <!-- 文科开始 -->
             <block wx:if="{{MAJORTYPE == 'gjv044girc'}}">
-                <view class='plan' style='heigth:auto;' wx:for="{{B1_Wen}}" wx:key="">
+                <view class='plan' style='heigth:auto;' wx:for="{{Wen}}" wx:key="">
                   <view class='plan-left'>
                     <view class='left-top'>
                       <view style='width:70%;'>{{item.MJNAME}}</view>
-                      <view class='gd_batch'>本科一批</view>
-                    </view>
-                  </view>
-                  <view style='width:100%;'>
-                    <view class='gd_schedule' style='display:flew;'>
-                      <text class='gd_schedule_text gd_font-color'>年份</text>
-                      <text class='gd_schedule_text gd_font-color'>2018</text>
-                      <text class='gd_schedule_text gd_font-color'>2017</text>
-                      <text class='gd_schedule_text gd_font-color'>2016</text> 
-                    </view>
-                    <view class='gd_schedule' style='display:flew;'>
-                      <text class='gd_schedule_text gd_font-color'>最高分</text>
-                      <text class='gd_schedule_text' style='color:#78C64F' wx:for-item="ite" wx:key="" wx:for="{{item.mjscores}}">{{ite.MAXSCORE}}</text>
-                      <text class='gd_schedule_text' wx:if="{{item.mjscores.length<2}}">-</text>
-                      <text class='gd_schedule_text' wx:if="{{item.mjscores.length<3}}">-</text> 
-                    </view>
-
-
-                    <view class='gd_schedule' style='display:flew;'>
-                      <text class='gd_schedule_text gd_font-color'>最低分</text>
-                      <text class='gd_schedule_text' style='color:#F36B6D' wx:for-item="ite" wx:key="" wx:for="{{item.mjscores}}">{{ite.MINSCORE}}</text>
-                      <text class='gd_schedule_text' wx:if="{{item.mjscores.length<2}}">-</text>
-                      <text class='gd_schedule_text' wx:if="{{item.mjscores.length<3}}">-</text> 
-                    </view>
-
-
-                    <view class='gd_schedule' style='display:flew;'>
-                      <text class='gd_schedule_text gd_font-color'>平均分</text>
-                      <text class='gd_schedule_text' style='color:#E3A337' wx:for-item="ite" wx:key="" wx:for="{{item.mjscores}}">{{ite.AVESCORE}}</text>
-                      <text class='gd_schedule_text' wx:if="{{item.mjscores.length<2}}">-</text>
-                      <text class='gd_schedule_text' wx:if="{{item.mjscores.length<3}}">-</text> 
-                    </view>
-
-
-                    <view class='gd_schedule' style='display:flew;'>
-                      <text class='gd_schedule_text gd_font-color'>计划数</text>
-                      <text class='gd_schedule_text' style='color:#3F9DFD' wx:for-item="ite" wx:key="" wx:for="{{item.mjscores}}">{{ite.PLANCOUNT}}</text>
-                      <text class='gd_schedule_text' wx:if="{{item.mjscores.length<2}}">-</text>
-                      <text class='gd_schedule_text' wx:if="{{item.mjscores.length<3}}">-</text> 
-                    </view>
-
-
-                    <view class='gd_schedule' style='display:flew;'>
-                      <text class='gd_schedule_text gd_font-color'>录取数</text>
-                      <text class='gd_schedule_text' style='color:#F26DF1' wx:for-item="ite" wx:key="" wx:for="{{item.mjscores}}">{{ite.ENTERCOUNT}}</text>
-                      <text class='gd_schedule_text' wx:if="{{item.mjscores.length<2}}">-</text>
-                      <text class='gd_schedule_text' wx:if="{{item.mjscores.length<3}}">-</text> 
-                    </view>
-                  </view>
-                </view>
-                <!-- 本一结束本二开始 -->
-                <view class='plan' style='heigth:auto;' wx:for="{{B2_Wen}}" wx:key="" wx:if="{{array.DIC_ID == 'r6j4mh69be'}}">
-                  <view class='plan-left'>
-                    <view class='left-top'>
-                      <view style='width:70%;'>{{item.MJNAME}}</view>
-                      <view class='gd_batch'>本科二批</view>
+                      <view class='gd_batch'>
+                        <text wx:if="{{item.ARRANGMENT_ID=='hjj4e5vr0c'}}">本科一批</text>
+                        <text wx:else="">本科二批</text>
+                      </view>
                     </view>
                   </view>
                   <view style='width:100%;'>
@@ -232,66 +180,14 @@
             </block>
               <!-- 文科结束  理科开始 -->
             <block wx:if="{{MAJORTYPE == 'r6j4mh69be'}}">
-                <view class='plan' style='heigth:auto;' wx:for="{{B1_Li}}" wx:key="">
+                <view class='plan gd_hide' style='heigth:auto;' wx:for="{{Li}}" wx:key="">
                   <view class='plan-left'>
                     <view class='left-top'>
                       <view style='width:70%;'>{{item.MJNAME}}</view>
-                      <view class='gd_batch'>本科一批</view>
-                    </view>
-                  </view>
-                  <view style='width:100%;'>
-                    <view class='gd_schedule' style='display:flew;'>
-                      <text class='gd_schedule_text gd_font-color'>年份</text>
-                      <text class='gd_schedule_text gd_font-color'>2018</text>
-                      <text class='gd_schedule_text gd_font-color'>2017</text>
-                      <text class='gd_schedule_text gd_font-color'>2016</text> 
-                    </view>
-                    <view class='gd_schedule' style='display:flew;'>
-                      <text class='gd_schedule_text gd_font-color'>最高分</text>
-                      <text class='gd_schedule_text' style='color:#78C64F' wx:for-item="ite" wx:key="" wx:for="{{item.mjscores}}">{{ite.MAXSCORE}}</text>
-                      <text class='gd_schedule_text' wx:if="{{item.mjscores.length<2}}">-</text>
-                      <text class='gd_schedule_text' wx:if="{{item.mjscores.length<3}}">-</text> 
-                    </view>
-
-
-                    <view class='gd_schedule' style='display:flew;'>
-                      <text class='gd_schedule_text gd_font-color'>最低分</text>
-                      <text class='gd_schedule_text' style='color:#F36B6D' wx:for-item="ite" wx:key="" wx:for="{{item.mjscores}}">{{ite.MINSCORE}}</text>
-                      <text class='gd_schedule_text' wx:if="{{item.mjscores.length<2}}">-</text>
-                      <text class='gd_schedule_text' wx:if="{{item.mjscores.length<3}}">-</text> 
-                    </view>
-
-
-                    <view class='gd_schedule' style='display:flew;'>
-                      <text class='gd_schedule_text gd_font-color'>平均分</text>
-                      <text class='gd_schedule_text' style='color:#E3A337' wx:for-item="ite" wx:key="" wx:for="{{item.mjscores}}">{{ite.AVESCORE}}</text>
-                      <text class='gd_schedule_text' wx:if="{{item.mjscores.length<2}}">-</text>
-                      <text class='gd_schedule_text' wx:if="{{item.mjscores.length<3}}">-</text> 
-                    </view>
-
-
-                    <view class='gd_schedule' style='display:flew;'>
-                      <text class='gd_schedule_text gd_font-color'>计划数</text>
-                      <text class='gd_schedule_text' style='color:#3F9DFD' wx:for-item="ite" wx:key="" wx:for="{{item.mjscores}}">{{ite.PLANCOUNT}}</text>
-                      <text class='gd_schedule_text' wx:if="{{item.mjscores.length<2}}">-</text>
-                      <text class='gd_schedule_text' wx:if="{{item.mjscores.length<3}}">-</text> 
-                    </view>
-
-
-                    <view class='gd_schedule' style='display:flew;'>
-                      <text class='gd_schedule_text gd_font-color'>录取数</text>
-                      <text class='gd_schedule_text' style='color:#F26DF1' wx:for-item="ite" wx:key="" wx:for="{{item.mjscores}}">{{ite.ENTERCOUNT}}</text>
-                      <text class='gd_schedule_text' wx:if="{{item.mjscores.length<2}}">-</text>
-                      <text class='gd_schedule_text' wx:if="{{item.mjscores.length<3}}">-</text> 
-                    </view>
-                  </view>
-                </view>
-                <!-- 本一结束本二开始 -->
-                <view class='plan' style='heigth:auto;' wx:for="{{B2_Li}}" wx:key="" wx:if="{{array.DIC_ID == 'r6j4mh69be'}}">
-                  <view class='plan-left'>
-                    <view class='left-top'>
-                      <view style='width:70%;'>{{item.MJNAME}}</view>
-                      <view class='gd_batch'>本科二批</view>
+                       <view class='gd_batch'>
+                        <text wx:if="{{item.ARRANGMENT_ID=='hjj4e5vr0c'}}">本科一批</text>
+                        <text wx:else="">本科二批</text>
+                       </view> 
                     </view>
                   </view>
                   <view style='width:100%;'>
